[package]
name = "markdown-preview"
version = "0.1.0"
edition = "2024"
description = "A lightweight markdown previewer for Linux — CLI and file manager right-click integration"
license = "MIT"
repository = "https://github.com/danvincent/markdown-preview"
keywords = ["markdown", "preview", "html", "gfm", "linux"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[lib]
name = "md_viewer"

[dependencies]
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
open = "5"
tiny_http = "0.12"

[dev-dependencies]
ureq = "2.9.1"

